fix subwrapper align items

--- a/App/style.less
+++ b/App/style.less
@@ -12,6 +12,7 @@
 .subwrapper {
 	display: flex;
 	justify-content: space-around;
+	align-items: start;
 }
 
 .box__slider-wrapper {
